modified:   app/assets/images/models/vehiculos/beechcraft-1900D.jpg 	new file:   app/assets/images/page/logo.jpg 	modified:   app/assets/images/slideshow/banner-4.jpg 	new file:   app/assets/images/slideshow/production.log 	modified:   app/assets/javascripts/03_jquery.flexslider-min.js 	modified:   app/assets/javascripts/application.js 	modified:   app/assets/stylesheets/breadcrumb.css 	new file:   app/assets/stylesheets/card.css 	modified:   app/assets/stylesheets/flexslider.css 	modified:   app/assets/stylesheets/templatemo-style.css 	modified:   app/controllers/about_controller.rb 	modified:   app/controllers/detalle_reservas_controller.rb 	modified:   app/controllers/reservas_controller.rb 	modified:   app/views/about/index.html.erb 	modified:   app/views/about/somos.html.erb 	modified:   app/views/detalle_reservas/confirmar_reserva.html.erb 	new file:   app/views/detalle_reservas/datos_reserva.html.erb 	modified:   app/views/detalle_reservas/seleccionar_viaje.html.erb 	deleted:    app/views/detalle_reservas/solicitar_reserva.html.erb 	modified:   app/views/layouts/application.html.erb 	modified:   app/views/reservas/index.html.erb 	modified:   app/views/ruta/_form.html.erb 	modified:   app/views/viajes/_form.html.erb 	new file:   app/views/viajes/index.html copy.erb 	modified:   app/views/viajes/index.html.erb 	modified:   app/views/viajes/show.html.erb 	modified:   config/application.rb 	modified:   config/database.yml 	modified:   config/routes.rb 	modified:   db/migrate/20160421184627_create_catalogos.rb 	modified:   db/migrate/20160424012053_create_aeropuertos.rb 	modified:   db/migrate/20160426224445_create_unidad_territorials.rb 	modified:   db/migrate/20160426234943_create_regions.rb 	modified:   db/migrate/20160427003848_create_division_pais.rb 	modified:   db/migrate/20160427004538_create_entidad_territorials.rb 	modified:   db/migrate/20160507005750_add_codigo_oficial_to_entidad_territorial.rb 	modified:   db/migrate/20160510191559_create_vehiculos.rb

--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -340,7 +340,7 @@
 						</div>
 					</div>					
 				</div>
-				<!--div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 					<div class="tm-tours-box-1">
 						<%= image_tag("sitios/tours-05.jpg", alt:"image", class:"img-responsive") %>
 						<div class="tm-tours-box-1-info">
@@ -390,7 +390,7 @@
 	
 	<script>
 		
-		document.addEventListener("turbolinks:load", function() {
+		$(document).on('turbolinks:load', function () {
 		  	$(".mainmenu").removeClass("active");
 		  	$("#mnuHome").addClass("active");
 		  				
