--- a/app/views/ruta/_form.html.erb
+++ b/app/views/ruta/_form.html.erb
@@ -96,6 +96,9 @@
 	</div>
 <% end %>
 <script>
+
+	alert("Prueba de ruta");	
+
 	document.addEventListener("turbolinks:load", function() {
    		$( "#estacion1" ).combobox();
    		$( "#estacion2" ).combobox();
