--- a/app/assets/stylesheets/breadcrumb.css
+++ b/app/assets/stylesheets/breadcrumb.css
@@ -1,189 +1,253 @@
-.breadcrumb { 
-  list-style: none; 
-  overflow: hidden; 
-  font: 18px Helvetica, Arial, Sans-Serif;
-  margin: 10px 0px 20px;
-  padding: 0;
-}
-.breadcrumb li { 
-  float: left; 
-}
-.breadcrumb li a {
-  color: white;
-  text-decoration: none; 
-  padding: 10px 0 10px 55px;
-  background: brown; /* fallback color */
-  background: hsla(34,85%,35%,1); 
-  position: relative; 
-  display: block;
-  float: left;
-}
-.breadcrumb li a:after { 
-  content: " "; 
-  display: block; 
-  width: 0; 
-  height: 0;
-  border-top: 50px solid transparent;           /* Go big on the size, and let overflow hide */
-  border-bottom: 50px solid transparent;
-  border-left: 30px solid hsla(34,85%,35%,1);
-  position: absolute;
-  top: 50%;
-  margin-top: -50px; 
-  left: 100%;
-  z-index: 2; 
-}   
-.breadcrumb li a:before { 
-  content: " "; 
-  display: block; 
-  width: 0; 
-  height: 0;
-  border-top: 50px solid transparent;           /* Go big on the size, and let overflow hide */
-  border-bottom: 50px solid transparent;
-  border-left: 30px solid white;
-  position: absolute;
-  top: 50%;
-  margin-top: -50px; 
-  margin-left: 1px;
-  left: 100%;
-  z-index: 1; 
-}   
-.breadcrumb li:first-child a {
-  padding-left: 10px;
-}
-.breadcrumb li:nth-child(2) a       { background:        hsla(34,85%,45%,1); }
-.breadcrumb li:nth-child(2) a:after { border-left-color: hsla(34,85%,45%,1); }
-.breadcrumb li:nth-child(3) a       { background:        hsla(34,85%,55%,1); }
-.breadcrumb li:nth-child(3) a:after { border-left-color: hsla(34,85%,55%,1); }
-.breadcrumb li:nth-child(4) a       { background:        hsla(34,85%,65%,1); }
-.breadcrumb li:nth-child(4) a:after { border-left-color: hsla(34,85%,65%,1); }
-.breadcrumb li:nth-child(5) a       { background:        hsla(34,85%,75%,1); }
-.breadcrumb li:nth-child(5) a:after { border-left-color: hsla(34,85%,75%,1); }
-.breadcrumb li:last-child a {
-  background: transparent !important;
-  color: black;
-  pointer-events: none;
-  cursor: default;
-}
-.breadcrumb li:last-child a:after { border: 0; }
-.breadcrumb li a:hover { background: hsla(34,85%,25%,1); }
-.breadcrumb li a:hover:after { border-left-color: hsla(34,85%,25%,1) !important; }
-
-
-.steps {
-  margin: 40px;
-  padding: 0;
-  overflow: hidden;
-}
-.steps a {
-  color: white;
-  text-decoration: none;
-}
-.steps em {
-  display: block;
-  font-size: 1.1em;
-  font-weight: bold;
-}
-.steps li {
-  float: left;
-  margin-left: 0;
-  width: 150px; /* 100 / number of steps */
-  height: 70px; /* total height */
-  list-style-type: none;
-  padding: 5px 5px 5px 30px; /* padding around text, last should include arrow width */
-  border-right: 3px solid white; /* width: gap between arrows, color: background of document */
-  position: relative;
-}
-/* remove extra padding on the first object since it doesn't have an arrow to the left */
-.steps li:first-child {
-  padding-left: 5px;
-}
-/* white arrow to the left to "erase" background (starting from the 2nd object) */
-.steps li:nth-child(n+2)::before {
-  position: absolute;
-  top:0;
-  left:0;
-  display: block;
-  border-left: 25px solid white; /* width: arrow width, color: background of document */
-  border-top: 40px solid transparent; /* width: half height */
-  border-bottom: 40px solid transparent; /* width: half height */
-  width: 0;
-  height: 0;
-  content: " ";
-}
-/* colored arrow to the right */
-.steps li::after {
-  z-index: 1; /* need to bring this above the next item */
-  position: absolute;
-  top: 0;
-  right: -25px; /* arrow width (negated) */
-  display: block;
-  border-left: 25px solid #7c8437; /* width: arrow width */
-  border-top: 40px solid transparent; /* width: half height */
-  border-bottom: 40px solid transparent; /* width: half height */
-  width:0;
-  height:0;
-  content: " ";
+@media (max-width: 767px) {
+    .btn-breadcrumb {
+        margin-left: 10px;
+        margin-right: 10px;
+        width: calc(100% - 20px) !important;
+    }
 }
 
-/* Setup colors (both the background and the arrow) */
-
-/* Completed */
-.steps li { background-color: #7C8437; }
-.steps li::after { border-left-color: #7c8437; }
-
-/* Current */
-.steps li.current { background-color: #C36615; }
-.steps li.current::after { border-left-color: #C36615; }
-
-/* Following */
-.steps li.current ~ li { background-color: #EBEBEB; }
-.steps li.current ~ li::after { border-left-color: #EBEBEB; }
-
-/* Hover for completed and current */
-.steps li:hover {background-color: #696}
-.steps li:hover::after {border-left-color: #696}
-
-
-
-.arrows { white-space: nowrap; }
-.arrows li {
-    display: inline-block;
-    line-height: 26px;
-    margin: 0 9px 0 -10px;
-    padding: 0 20px;
-    position: relative;
+.btn-breadcrumb {
+    width: 100%;
+    background-color: #fff;
+    border-radius: 4px;
+    border: solid 1px #ccc;
 }
-.arrows li::before,
-.arrows li::after {
-    border-right: 1px solid #666666;
-    content: '';
+
+.btn-breadcrumb .btn {
+    border-color: transparent;
+    border: 0px solid transparent;
+    border-right: 1px solid transparent !important;
+    font-size: 16px;
+    font-weight: 600;
+}
+
+.breadcrumb-default {
+    background-color: #fff;
+}
+
+.btn-primary,
+.breadcrumb-primary {
+    background-color: #337ab7;
+}
+
+.btn-primary:hover {
+    background-color: #286090;
+}
+
+.breadcrumb-success {
+    background-color: #5cb85c;
+}
+
+.breadcrumb-info {
+    background-color: #5bc0de;
+}
+
+.breadcrumb-warning {
+    background-color: #f0ad4e;
+}
+
+.breadcrumb-danger {
+    background-color: #d9534f;
+}
+
+.breadcrumb-negro {
+    background-color: #d4d4d4;
+}
+
+.btn-breadcrumb .btn:last-child {
+    font-weight: bold;
+    text-decoration: underline;
+}
+
+.btn-breadcrumb .btn:last-child:after {
+    margin-left: -2px;
+}
+
+.btn-breadcrumb .btn:last-child:before {
+    margin-left: -1px;
+}
+
+.btn-breadcrumb .btn-derecha {
+    float: right;
+    margin-right: 0px;
+    padding: 6px 10px 6px 10px !important;
+    margin-left: 0px !important;
+    border-radius: 0px !important;
+}
+
+.btn-breadcrumb .btn-derecha:first-child {
+    border-top-right-radius: 2px !important;
+    border-bottom-right-radius: 2px !important;
+}
+
+.btn-breadcrumb .btn-derecha:after,
+.btn-breadcrumb .btn-derecha:before {
+    content: none !important;
+}
+
+.btn-breadcrumb .btn:after {
+    content: " ";
     display: block;
-    height: 50%;
+    width: 0;
+    height: 0;
+    border-top: 13px solid transparent;
+    border-bottom: 14px solid transparent;
+    border-left: 10px solid white;
     position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    z-index: -1;
-    transform: skewX(45deg);   
-}
-.arrows li::after {
-    bottom: 0;
-    top: auto;
-    transform: skewX(-45deg);
+    top: 50%;
+    margin-top: -14px;
+    margin-left: 0px;
+    left: 100%;
+    z-index: 3;
 }
 
-.arrows li:last-of-type::before, 
-.arrows li:last-of-type::after { 
-    display: none; 
+.btn-breadcrumb .btn:before {
+    content: " ";
+    display: block;
+    width: 0;
+    height: 0;
+    border-top: 13px solid transparent;
+    border-bottom: 14px solid transparent;
+    border-left: 10px solid rgb(173, 173, 173);
+    position: absolute;
+    top: 50%;
+    margin-top: -14px;
+    margin-left: 1px;
+    left: 100%;
+    z-index: 3;
 }
 
-.arrows li a { 
-   font: bold 24px Sans-Serif;  
-   letter-spacing: -1px; 
-   text-decoration: none;
+
+/** The Spacing **/
+
+.btn-breadcrumb .btn {
+    padding: 6px 12px 6px 24px;
 }
 
-.arrows li:nth-of-type(1) a { color: hsl(0, 0%, 70%); } 
-.arrows li:nth-of-type(2) a { color: hsl(0, 0%, 65%); } 
-.arrows li:nth-of-type(3) a { color: hsl(0, 0%, 50%); } 
-.arrows li:nth-of-type(4) a { color: hsl(0, 0%, 45%); } 
+.btn-breadcrumb .btn:first-child {
+    padding: 6px 6px 6px 10px;
+}
+
+.btn-breadcrumb .btn:last-child {
+    padding: 6px 18px 6px 24px;
+}
+
+
+/** Default button **/
+
+.btn-breadcrumb .btn.btn-default:after {
+    border-left: 10px solid #fff;
+}
+
+.btn-breadcrumb .btn.btn-default:hover:after {
+    border-left: 10px solid #e6e6e6;
+}
+
+.btn-breadcrumb .btn.btn-default:hover:before,
+.btn-breadcrumb .btn.btn-default:before {
+    border-left: 10px solid #adadad;
+}
+
+.breadcrumb-default {
+    border: solid 1px #adadad;
+}
+
+
+/** Primary button **/
+
+.btn-breadcrumb .btn.btn-primary:after {
+    border-left: 10px solid #337ab7;
+}
+
+.btn-breadcrumb .btn.btn-primary:hover:after {
+    border-left: 10px solid #286090;
+}
+
+.btn-breadcrumb .btn.btn-primary:hover:before,
+.btn-breadcrumb .btn.btn-primary:before {
+    border-left: 10px solid #204d74;
+}
+
+.breadcrumb-primary {
+    border: solid 1px #204d74;
+}
+
+
+/** Success button **/
+
+.btn-breadcrumb .btn.btn-success:after {
+    border-left: 10px solid #5cb85c;
+}
+
+.btn-breadcrumb .btn.btn-success:hover:after {
+    border-left: 10px solid #449d44;
+}
+
+.btn-breadcrumb .btn.btn-success:hover:before,
+.btn-breadcrumb .btn.btn-success:before {
+    border-left: 10px solid #398439;
+}
+
+.breadcrumb-success {
+    border: solid 1px #398439;
+}
+
+
+/** Danger button **/
+
+.btn-breadcrumb .btn.btn-danger:after {
+    border-left: 10px solid #d9534f;
+}
+
+.btn-breadcrumb .btn.btn-danger:hover:after {
+    border-left: 10px solid #c9302c;
+}
+
+.btn-breadcrumb .btn.btn-danger:hover:before,
+.btn-breadcrumb .btn.btn-danger:before {
+    border-left: 10px solid #ac2925;
+}
+
+.breadcrumb-danger {
+    border: solid 1px #ac2925;
+}
+
+
+/** Warning button **/
+
+.btn-breadcrumb .btn.btn-warning:after {
+    border-left: 10px solid #f0ad4e;
+}
+
+.btn-breadcrumb .btn.btn-warning:hover:after {
+    border-left: 10px solid #ec971f;
+}
+
+.btn-breadcrumb .btn.btn-warning:hover:before,
+.btn-breadcrumb .btn.btn-warning:before {
+    border-left: 10px solid #d58512;
+}
+
+.breadcrumb-warning {
+    border: solid 1px #d58512;
+}
+
+
+/** Info button **/
+
+.btn-breadcrumb .btn.btn-info:after {
+    border-left: 10px solid #5bc0de;
+}
+
+.btn-breadcrumb .btn.btn-info:hover:after {
+    border-left: 10px solid #31b0d5;
+}
+
+.btn-breadcrumb .btn.btn-info:hover:before,
+.btn-breadcrumb .btn.btn-info:before {
+    border-left: 10px solid #269abc;
+}
+
+.breadcrumb-info {
+    border: solid 1px #269abc;
+}
