--- a/app/views/detalle_reservas/confirmar_reserva.html.erb
+++ b/app/views/detalle_reservas/confirmar_reserva.html.erb
@@ -1,3 +1,4 @@
+<div class="section-margin-top"></div>
 <!-- gray bg -->	
 <section class="container tm-home-section-1" id="more">
 	<div class="row">
@@ -10,69 +11,107 @@
 						<div class="tm-home-box-h"></div>
 						<p class="slider-subtitle">Apreciado cliente, para brindarle un mejor servicio y evitar contratiempos le invitamos a verificar que la información de la reserva es correcta.</p>
 						<div class="col-lg-12">
-							<table class="slider-abstract">
-									<tr>
-										<th colspan="4"><%= @producto %></th>
-										<th colspan="3"><strong>NRO. DE PASAJEROS</strong></th>
-									</tr>
-									<tr>
-										<th>ORIGEN</th>
-										<td><%= @enterOrigen.enter_nombreCorto %></td>
-										<th><strong>FECHA DE IDA</strong></th>
-										<td><%= @dtFechaIda %></td>
-										<th><strong>ADULTOS</strong></th>
-										<th><strong>MENORES</strong></th>
-										<th><strong>INFANTES</strong></th>
-									</tr>
-									<tr>
-										<th>DESTINO</th>
-										<td><%= @enterDestino == nil ? "" : @enterDestino.enter_nombreCorto %></td>
-										<th><strong>FECHA DE REGRESO</strong></th>
-										<td><%= @dtFechaRegreso %></td>
-										<td class="center"><%= @nroAdultos %></td>
-										<td class="center"><%= @nroMenores %></td>
-										<td class="center"><%= @nroInfantes %></td>
-									</tr>
-							</table>
+																	<div class="col-lg-8 col-md-12 col-sm-12 center">
+											<div class="row tm-bg-lblue tm-padding-dv">
+												<h3 class="tm-white"><strong><%= @producto %></strong><h3>
+											</div>
+											<div class="row">
+												<div class="col-lg-3 tm-bg-lgreen">
+													<p>ORIGEN</p>
+												</div>
+												<div class="col-lg-3">
+													<p><%= @enterOrigen.enter_nombreCorto %></p>
+												</div>
+												<div class="col-lg-3 tm-bg-lgreen">
+													<p>DESTINO</p>
+												</div>
+												<div class="col-lg-3">
+													<p><%= @enterDestino.enter_nombreCorto %></p>
+												</div>
+											</div>
+											<div class="row">
+												<div class="col-lg-3 tm-bg-lgreen">
+													<p>FECHA DE IDA</p>
+												</div>
+												<div class="col-lg-3">
+													<p><%= @dtFechaIda %></p>
+												</div>
+												<div class="col-lg-3 tm-bg-lgreen">
+													<p>FECHA DE REGRESO</p>
+												</div>
+												<div class="col-lg-3">
+													<p><%= @dtFechaRegreso %></p>
+												</div>
+											</div>
+										</div>
+										<div class="col-lg-4 col-md-12 col-sm-12">
+											<div class="row tm-bg-dgray tm-padding-dv center">
+												<h3 class="tm-white"><strong>PASAJEROS</strong></h3>
+											</div>
+											<div class="row">
+												<div class="col-lg-4 col-md-12 col-sm-12 center">
+													<div class="row tm-bg-lgreen">
+														<p>ADULTOS</p>
+													</div>
+													<div class="row">
+														<p><%= @nroAdultos %></p>
+													</div>
+												</div>
+											
+												<div class="col-lg-4 col-md-12 col-sm-12 center">
+													<div class="row tm-bg-lgreen">
+														<p>MENORES</p>
+													</div>
+													<div class="row">
+														<p><%= @nroMenores %></p>
+													</div>
+												</div>
+
+												<div class="col-lg-4 col-md-12 col-sm-12 center">
+													<div class="row tm-bg-lgreen">
+														<p>ADULTOS</p>
+													</div>
+													<div class="row">
+														<p><%= @nroInfantes %></p>
+													</div>
+												</div>
+
+											</div>
+										</div>
+
 							<p>&nbsp;</p>
-							<table class="datos-persona">
-								<thead>
-									<tr>
-										<th colspan="4">PASAJEROS</th>
-									</tr>
-									<tr>
-										<th>TIPO PASAJERO</th>
-										<th>DOCUMENTO DE IDENTIFICACION</th>
-										<th>NOMBRES</th>
-										<th>APELLIDOS</th>
-									</tr>
-								</thead>
-								<tbody>
-									<% for i in 0..@datosReserva["tipo_identificacion"].length - 1 %>
-									<tr>
-										<td><%= @datosReserva["tipo_pax"][i] %></td>
-										<td><%= @datosReserva["tipo_identificacion"][i] + " - " + @datosReserva["numero_identificacion"][i] %></td>
-										<td><%= @datosReserva["nombres"][i] %></td>
-										<td><%= @datosReserva["apellidos"][i] %></td>
-									</tr>
-									<% end %>
-								</tbody>
-							</table>
+							<div class="row">
+								<div class="col-lg-12 col-md-12 col-sm-12">
+									<div class="col-lg-12 col-md-12 col-sm-12 tm-bg-dgray">
+										<h4 class="tm-white">PASAJEROS</h4>
+									</div>
+									<div class="col-lg-12 col-md-12 col-sm-12 tm-bg-lgray">
+										<% for i in 0..@datosReserva["tipo_identificacion"].length - 1 %>
+										<div class="row">
+											<%= @datosReserva["tipo_pax"][i] %>
+											<%= @datosReserva["tipo_identificacion"][i] + " - " + @datosReserva["numero_identificacion"][i] %>
+											<%= @datosReserva["nombres"][i] %>
+											<%= @datosReserva["apellidos"][i] %>
+										</div>
+										<% end %>
+									</div>	
+								</div>
+							</div>
 							<br>
 							<table class="datos-contacto">
 								<thead>
 									<tr>
-										<th colspan="3">INFORMACIÓN DE CONTACTO</th>
+										<th colspan="2">INFORMACIÓN DE CONTACTO</th>
 									</tr>
 									<tr>
-										<th>NOMBRE COMPLETO / RAZÓN SOCIAL</th>
-										<th>TELÉFONO</th>
-										<th>CORREO ELECTRÓNICO</th>
+										<!--th>NOMBRE COMPLETO / RAZÓN SOCIAL</th-->
+										<th width="50%">TELÉFONO</th>
+										<th width="50%">CORREO ELECTRÓNICO</th>
 									</tr>
 								</thead>
 								<tbody>
 									<tr>
-										<td><%= @datosContacto["nombres"] + " " + @datosContacto["apellidos"] %></td>
+										<!--td><%#=  @datosReserva["nombres"][0]  + " " + @datosReserva["apellidos"][0] %></td-->
 										<td><%= @datosContacto["telefono"] %></td>
 										<td><%= @datosContacto["correo_electronico"] %></td>
 									</tr>
