--- a/app/views/viajes/index.html.erb
+++ b/app/views/viajes/index.html.erb
@@ -13,126 +13,63 @@
 					<div class="section-header">
 						<h1>Viajes</h1>
 					</div>
-					<div class="row">
-						<div class="col-lg-2"></div>
-						<div class="col-lg-8">
-							<%= form_tag(viajes_url, method: :get, id: :frmBuscar) do %>
-								<div class="col-lg-6">
-									<div class="form-group">
-										<%= text_field_tag "txtRangoFechasViaje", @rangoFechas, options = {class:"form-control", placeholder:"RANGO DE FECHAS"} %>
-										<!--i class="glyphicon glyphicon-calendar fa fa-calendar"></i-->
-									</div>
-								</div>
-								<div class="col-lg-6">
-									<div class="form-group">
-					            		<%= select_tag :cboCiudad, options_from_collection_for_select(@ciudadesAeropuertos, :id, :enter_nombreOficial, @ciudadViaje), options={class:"form-control", prompt: "-- CIUDAD --"} %>
-									</div>
-								</div>
-							</div>
-							<div class="col-lg-2"></div>
-							<div class="col-lg-12 margin-bottom-30">
-								<center>
-									<%= submit_tag 'Buscar', class:"button find" %>
-								</center>
-							</div>
-						<% end %>
-					</div>
-					<div class="row">
-						<div class="col-lg-11 col-md-11 col-sm-11 center">
-							<% unless @viajes.nil? %>
-							 <% @viajes.each do |viaje| %>
-								<div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 col-xxs-12">
-									<div class="tm-tours-box-2">
-										<% ruta = Rutum.find(viaje.viaje_ruta) %>
-										<% lugares = set_descripcion_ruta(ruta.ruta_descripcion)%>
-										<% arrLugares = lugares.split(" - ") %>
-										<% arrHoras = viaje.viaje_horaSalida.squeeze("|").split("|") %>
-										<!--<%#= set_descripcion_ruta_aeroptos(ruta.ruta_descripcion) %>-->
-										
-										<h3 class="titulo-viajes">
-											<!--ul-->
-												<% arrLugares.each do |h| %>
-													<%= h %><br>
-												<% end %>
-											<!--/ul-->
-										</h3>
-										<h3><%= (viaje.viaje_fecha.strftime "%d-") + @meses[(viaje.viaje_fecha.strftime "%m").to_i] + (viaje.viaje_fecha.strftime "-%Y") %><br>
-											<%= viaje.vehi_capacPasajeros.to_s + " Pax" %>
-										</h3>				
-										<div class="tm-tours-box-2-info info-viajes">
-											
-											<h4><strong>IDA</strong></h4>
-											
-											<% for i in 0..arrLugares.length-2 do %>
-												<p><%= arrLugares[i] + " - " + arrHoras[i] %></p>
-											<% end %>
-											<% if viaje.viaje_trayecto == "RT" then %>
-												<% arrLugares = arrLugares.reverse() %>
-												<% arrLugares = arrLugares[0, arrLugares.length - 1]%>
-												<% arrHoras = arrHoras[(arrHoras.length/2), arrHoras.length - 1]%>
-												<h4><strong>REGRESO</strong></h4>
-												<% for i in 0..arrLugares.length-1 do %>
-													<p><%= arrLugares[i] + " - " + arrHoras[i].to_s %></p>
-												<% end %>
-											<% end %>
-										</div>
-										<!--h3><%= (viaje.viaje_fecha.strftime "%d-") + @meses[(viaje.viaje_fecha.strftime "%m").to_i] + (viaje.viaje_fecha.strftime "-%Y") %></h3-->
-										<div class="tm-tours-box-2-bottom-bar">
-											<%= link_to(viaje, class:"btn btn-info") do %>
-					        					<i class="fa fa-book"></i>
-					        				<% end %>
-											<a href="<%= edit_viaje_path(viaje) %>" class="btn btn-warning">
-					        					<i class="fa fa-edit"></i>
-					        				</a>
-					        				<a data-confirm="¿Está seguro(a) de eliminar este registro?" class="btn btn-danger" rel="nofollow" data-method="delete" href=<%= "/viajes/#{viaje.id}"%> >
-					        					<i class="fa fa-trash"></i>
-					        				</a>
-										</div>
-									</div>
-								</div>
-							<% end %>
-							<% end %>
-						</div>
-					</div>
-					<!--table id="indexTable" class="stripe hover">
+					<table id="indexTable" class="stripe hover">
 						<thead>
 					    	<tr>
 					      		<th>Ruta</th>
 					      		<th>Fecha</th>
-					      		<th>Hora de salida</th>
-					      		<th>Estado viaje</th>
-					      		<th>Vehiculo</th>
-					      		<th>Estado registro</th>
+					      		<th>Ida</th>
+								<th>Regreso</th>
+					      		<!--th>Estado viaje</th-->
+					      		<!--th>Vehiculo</th-->
+					      		<!--th>Estado registro</th-->
 					      <th colspan="3"></th>
 					    </tr>
   					</thead>
 
-  <tbody>
-    <%# @viajes.each do |viaje| %>
-      <tr>
-        <td><%#= viaje.viaje_ruta %></td>
-        <td><%#= viaje.viaje_fecha %></td>
-        <td><%#= viaje.viaje_horaSalida %></td>
-        <td><%#= viaje.viaje_estado %></td>
-        <td><%#= viaje.vehiculo %></td>
-        <td><%#= viaje.viaje_estadoRegistro %></td>
-					        		<td><%#= link_to(viaje, class:"btn btn-info") do %>
-					        				<i class="fa fa-book"></i>
-					        			<%# end %>
-					        		</td>
-					        		<td><a href="<%#= edit_viaje_path(viaje) %>" class="btn btn-warning">
-					        				<i class="fa fa-edit"></i>
-					        			</a>
-					        		</td>
-					        		<td>
-					        			<a data-confirm="¿Está seguro(a) de eliminar este registro?" class="btn btn-danger" rel="nofollow" data-method="delete" href=<%#= "/viajes/#{viaje.id}"%> >
-					        				<i class="fa fa-trash"></i>
-					        			</a>
-					        		</td>
-      							</tr>
-    						<%# end %>
-  						</tbody>
-					</table-->
+					<tbody>
+						<%@viajes.each do |viaje| %>
+							<% ruta = Rutum.find(viaje.viaje_ruta) %>
+							<% lugares = set_descripcion_ruta(ruta.ruta_descripcion)%>
+							<% arrLugares = lugares.split(" - ") %>
+							<% arrHoras = viaje.viaje_horaSalida.squeeze("|").split("|") %>
+							
+							<tr>
+								<td><%= lugares %></td>
+								<td><%= (viaje.viaje_fecha.strftime "%d-") + @meses[(viaje.viaje_fecha.strftime "%m").to_i].upcase + (viaje.viaje_fecha.strftime "-%Y") %></td>
+								<td>	<% for i in 0..arrLugares.length-2 do %>
+												<p><%= arrLugares[i] + " - " + arrHoras[i] %></p>
+											<% end %>
+								</td>
+								<td>
+									<% if viaje.viaje_trayecto == "RT" then %>
+										<% arrLugares = arrLugares.reverse() %>
+										<% arrLugares = arrLugares[0, arrLugares.length - 1]%>
+										<% arrHoras = arrHoras[(arrHoras.length/2), arrHoras.length - 1]%>
+										<% for i in 0..arrLugares.length-1 do %>
+											<p><%= arrLugares[i] + " - " + arrHoras[i].to_s %></p>
+										<% end %>
+									<% end %>
+								</td>
+								<td><%#= viaje.vehiculo %></td>
+								<td><%#= viaje.viaje_estadoRegistro %></td>
+								<td><%= link_to(viaje, class:"btn btn-info") do %>
+										<i class="fa fa-book"></i>
+									<% end %>
+								</td>
+								<td><a href="<%= edit_viaje_path(viaje) %>" class="btn btn-warning">
+										<i class="fa fa-edit"></i>
+									</a>
+								</td>
+								<td>
+									<a data-confirm="¿Está seguro(a) de eliminar este registro?" class="btn btn-danger" rel="nofollow" data-method="delete" href=<%#= "/viajes/#{viaje.id}"%> >
+										<i class="fa fa-trash"></i>
+									</a>
+								</td>
+							</tr>
+						<% end %>
+					</tbody>
+				</table>
 					<div class="section-footer">
 						<%= link_to 'Regresar', administracion_path , class:"button back" %>
 						<%= link_to 'Nuevo registro', new_viaje_path, class:"button add" %>
@@ -181,10 +118,10 @@
 		$('#indexTable').DataTable({
     		"pagingType": "full_numbers",
 			"aoColumns" : [
-							{ sWidth : "20%" },
-							{ sWidth : "40%" },
 							{ sWidth : "30%" },
-							{ sWidth : "10%" }
+							{ sWidth : "20%" },
+							{ sWidth : "25%" },
+							{ sWidth : "25%" }
 						]
     		});
 	});
